# wqb

./: .gitignore  README_CN.md  pyproject.toml  requirements-dev.txt
wqb/: __init__.py  machine_lib.py
wqb/alpha_template/: Alpha Machine.ipynb  anl4_mark_close_ts.ipynb  fundamental_ratio_ts.ipynb  put_call_greek.ipynb  sentiment_pn_ts.ipynb
wqb/config/: __init__.py  cnf.py
wqb/test/: simulate.py  usual.py
